--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1",
-    "postcss": "^8.4.38"
+    "postcss": "^8.4.38",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
