--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resolve-url-loader": "^5.0.0",
     "svgo": "^3.3.2",
     "web-vitals": "^5.0.0"
   },
@@ -42,5 +43,8 @@
   },
   "overrides": {
     "nth-check": "^2.0.1"
+  },
+  "resolutions": {
+    "postcss": "^8.5.3"
   }
 }
